Include MI in compute cluster creation

--- a/ml-pipelines/sdk/deploy-batch-endpoint-sdkv2.ipynb
+++ b/ml-pipelines/sdk/deploy-batch-endpoint-sdkv2.ipynb
@@ -237,13 +237,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "gather": {
      "logged": 1668247892781
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\heenarefai\\Documents\\code\\mlops-v2-workshop\\mlops\\Lib\\site-packages\\azure\\ai\\ml\\entities\\_deployment\\batch_deployment.py:137: UserWarning: This class is intended as a base class and it's direct usage is deprecated. Use one of the concrete implementations instead:\n",
+      "* ModelBatchDeployment - For model-based batch deployments\n",
+      "* PipelineComponentBatchDeployment - For pipeline component-based batch deployments\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "# create batch deployment\n",
     "from azure.ai.ml.entities import BatchDeployment, Model, Environment\n",
@@ -256,7 +267,7 @@
     "    description=\"this is a sample batch deployment\",\n",
     "    endpoint_name=endpoint_name,\n",
     "    model=model,\n",
-    "    compute=\"batch-cluster\",\n",
+    "    compute=\"batch-cluster-mi\",\n",
     "    instance_count=2,\n",
     "    max_concurrency_per_instance=2,\n",
     "    mini_batch_size=10,\n",
@@ -283,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "gather": {
@@ -321,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {
     "gather": {
      "logged": 1668689480461
@@ -329,21 +340,12 @@
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32mUploading taxi-batch.csv\u001b[32m (< 1 MB): 100%|██████████| 133k/133k [00:00<00:00, 7.89MB/s]\n",
-      "\u001b[39m\n",
-      "\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "<azure.ai.ml._restclient.v2020_09_01_dataplanepreview.models._models_py3.BatchJobResource at 0x7f085c160460>"
+       "<azure.ai.ml._restclient.v2020_09_01_dataplanepreview.models._models_py3.BatchJobResource at 0x1fe971a4410>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
