--- a/ml-pipelines/sdk/deploy-online-endpoint-sdkv2.ipynb
+++ b/ml-pipelines/sdk/deploy-online-endpoint-sdkv2.ipynb
@@ -21,9 +21,9 @@
    "outputs": [],
    "source": [
     "# Enter details of your AML workspace\n",
-    "subscription_id = \"<subscription_id>\"\n",
-    "resource_group = \"<resouce_group_name>\"\n",
-    "workspace = \"<workspace_name>\""
+    "subscription_id = \"5bef918d-59f1-49d6-897b-919e5d5c05a0\"\n",
+    "resource_group = \"rg-gasunimlopsv2-prod\"\n",
+    "workspace = \"mlw-gasunimlopsv2-prod\""
    ]
   },
   {
@@ -144,7 +144,7 @@
     "    description=\"Taxi online endpoint\",\n",
     "    auth_mode=\"aml_token\",\n",
     ")\n",
-    "poller = ml_client.online_endpoints.___________________(\n",
+    "poller = ml_client.online_endpoints.begin_create_or_update(\n",
     "    online_endpoint,   \n",
     ")\n",
     "\n",
@@ -161,7 +161,30 @@
      "output_type": "stream",
      "text": [
       "Endpoint creation succeeded\n",
-      "ManagedOnlineEndpoint({'public_network_access': 'Enabled', 'provisioning_state': 'Succeeded', 'scoring_uri': 'https://taxi-online-endpoint-5807.eastus2.inference.ml.azure.com/score', 'openapi_uri': 'https://taxi-online-endpoint-5807.eastus2.inference.ml.azure.com/swagger.json', 'name': 'taxi-online-endpoint-5807', 'description': 'Taxi online endpoint', 'tags': {}, 'properties': {'azureml.onlineendpointid': '/subscriptions/14585b9f-5c83-4a76-8055-42149123f99f/resourcegroups/mldemorg/providers/microsoft.machinelearningservices/workspaces/mldemo/onlineendpoints/taxi-online-endpoint-5807', 'AzureAsyncOperationUri': 'https://management.azure.com/subscriptions/14585b9f-5c83-4a76-8055-42149123f99f/providers/Microsoft.MachineLearningServices/locations/eastus2/mfeOperationsStatus/oe:00187fbf-e9d1-40fe-becd-8d9bd1713ab3:a7f35f02-2493-40f0-8452-35cd3a20cb73?api-version=2022-02-01-preview'}, 'id': '/subscriptions/14585b9f-5c83-4a76-8055-42149123f99f/resourceGroups/mldemorg/providers/Microsoft.MachineLearningServices/workspaces/mldemo/onlineEndpoints/taxi-online-endpoint-5807', 'Resource__source_path': None, 'base_path': '/mnt/batch/tasks/shared/LS_root/mounts/clusters/jomedin2/code/Users/jomedin/mlops-v2/ml-pipelines/sdk', 'creation_context': None, 'serialize': <msrest.serialization.Serializer object at 0x7f06d308df30>, 'auth_mode': 'aml_token', 'location': 'eastus2', 'identity': <azure.ai.ml.entities._credentials.IdentityConfiguration object at 0x7f06c93f9690>, 'traffic': {}, 'mirror_traffic': {}, 'kind': 'Managed'})\n"
+      "auth_mode: aml_token\n",
+      "description: Taxi online endpoint\n",
+      "id: /subscriptions/5bef918d-59f1-49d6-897b-919e5d5c05a0/resourceGroups/rg-gasunimlopsv2-prod/providers/Microsoft.MachineLearningServices/workspaces/mlw-gasunimlopsv2-prod/onlineEndpoints/taxi-online-endpoint-4849\n",
+      "identity:\n",
+      "  principal_id: fedd2b65-e88f-40fb-8b07-3967d185eb35\n",
+      "  tenant_id: 1a640b76-52c0-4a5c-b26b-3148406b593f\n",
+      "  type: system_assigned\n",
+      "kind: Managed\n",
+      "location: westeurope\n",
+      "mirror_traffic: {}\n",
+      "name: taxi-online-endpoint-4849\n",
+      "openapi_uri: https://taxi-online-endpoint-4849.westeurope.inference.ml.azure.com/swagger.json\n",
+      "properties:\n",
+      "  AzureAsyncOperationUri: https://management.azure.com/subscriptions/5bef918d-59f1-49d6-897b-919e5d5c05a0/providers/Microsoft.MachineLearningServices/locations/westeurope/mfeOperationsStatus/oeidp:9d59d97a-fd9d-4edf-962b-3bc29e6a57e5:2253dc8f-64f9-48ba-a548-fe7af84f266a?api-version=2022-02-01-preview\n",
+      "  azureml.onlineendpointid: /subscriptions/5bef918d-59f1-49d6-897b-919e5d5c05a0/resourcegroups/rg-gasunimlopsv2-prod/providers/microsoft.machinelearningservices/workspaces/mlw-gasunimlopsv2-prod/onlineendpoints/taxi-online-endpoint-4849\n",
+      "  createdAt: 2025-07-08T13:56:06.039360+0000\n",
+      "  createdBy: System Administrator\n",
+      "  lastModifiedAt: 2025-07-08T13:56:06.039360+0000\n",
+      "provisioning_state: Succeeded\n",
+      "public_network_access: enabled\n",
+      "scoring_uri: https://taxi-online-endpoint-4849.westeurope.inference.ml.azure.com/score\n",
+      "tags: {}\n",
+      "traffic: {}\n",
+      "\n"
      ]
     }
    ],
@@ -223,15 +246,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Check: endpoint taxi-online-endpoint-5807 exists\n",
-      "data_collector is not a known attribute of class <class 'azure.ai.ml._restclient.v2022_02_01_preview.models._models_py3.ManagedOnlineDeployment'> and will be ignored\n"
+      "Instance type Standard_DS2_v2 may be too small for compute resources. Minimum recommended compute SKU is Standard_DS3_v2 for general purpose endpoints. Learn more about SKUs here: https://learn.microsoft.com/azure/machine-learning/referencemanaged-online-endpoints-vm-sku-list\n",
+      "Check: endpoint taxi-online-endpoint-4849 exists\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "....................................................................................."
+      "...................................................................................................................................."
      ]
     }
    ],
@@ -248,7 +271,7 @@
     ")\n",
     "\n",
     "poller = ml_client.online_deployments.begin_create_or_update(\n",
-    "    deployment=________________________\n",
+    "    deployment=blue_deployment\n",
     ")\n",
     "poller.wait()"
    ]
@@ -272,7 +295,7 @@
    "source": [
     "# allocate traffic\n",
     "# blue deployment takes 100 traffic\n",
-    "online_endpoint.traffic = {\"blue\": ____}\n",
+    "online_endpoint.traffic = {\"blue\": 100}\n",
     "poller = ml_client.begin_create_or_update(online_endpoint)\n",
     "poller.wait()"
    ]
@@ -302,7 +325,7 @@
     {
      "data": {
       "text/plain": [
-       "'[11.928738280516184, 15.403240743572406]'"
+       "'[11.821297944525352, 15.327631675652293]'"
       ]
      },
      "execution_count": 8,
@@ -317,6 +340,13 @@
     "    request_file=\"../../data/taxi-request.json\",\n",
     ")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -324,9 +354,9 @@
    "name": "python310-sdkv2"
   },
   "kernelspec": {
-   "display_name": "Python 3.10 - SDK V2",
+   "display_name": "mlops",
    "language": "python",
-   "name": "python310-sdkv2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -338,7 +368,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.13.5"
   },
   "microsoft": {
    "host": {
