--- a/notebooks/prep.ipynb
+++ b/notebooks/prep.ipynb
@@ -138,7 +138,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 7,
       "metadata": {
         "gather": {
           "logged": 1675838899063
@@ -155,6 +155,13 @@
       },
       "outputs": [
         {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "2025/07/08 13:52:29 INFO mlflow.tracking.fluent: Experiment with name 'heena-test' does not exist. Creating a new experiment.\n"
+          ]
+        },
+        {
           "name": "stdout",
           "output_type": "stream",
           "text": [
@@ -162,7 +169,7 @@
             "Train dataset output path: /tmp/prep/train\n",
             "Val dataset output path: /tmp/prep/val\n",
             "Test dataset path: /tmp/prep/test\n",
-            "artifact uri: azureml://experiments/shared-components/runs/e27d48ac-9558-4808-ad68-bd269bb100cc/artifacts\n"
+            "artifact uri: file:///c:/Users/heenarefai/Documents/code/mlops-v2-workshop/notebooks/mlruns/775451619847611530/a4f3a432bc5e446ead3e082fdebe48e1/artifacts\n"
           ]
         }
       ],
@@ -178,7 +185,7 @@
         "    print(line)\n",
         "\n",
         "### !!!! TODO !! Replace ith your name `my-experiment-john`\n",
-        "mlflow.set_experiment(\"xxxx\")\n",
+        "mlflow.set_experiment(\"heena-test\")\n",
         "with mlflow.start_run(run_name=\"prep-nyc\"):\n",
         "  print('artifact uri:', mlflow.get_artifact_uri())  \n",
         "  main(args)\n",
@@ -188,7 +195,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 8,
       "metadata": {
         "gather": {
           "logged": 1675838899221
@@ -211,13 +218,33 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "train.parquet\r\n"
+            " Volume in drive C has no label.\n",
+            " Volume Serial Number is DC19-76FD\n",
+            "\n",
+            " Directory of c:\\tmp\\prep\\train\n",
+            "\n",
+            "08/07/2025  13:50    <DIR>          .\n",
+            "08/07/2025  13:50    <DIR>          ..\n",
+            "08/07/2025  13:52           275.307 train.parquet\n",
+            "               1 File(s)        275.307 bytes\n",
+            "               2 Dir(s)  774.390.288.384 bytes free\n"
           ]
         }
       ],
       "source": [
         "ls \"/tmp/prep/train\" "
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "vscode": {
+          "languageId": "shellscript"
+        }
+      },
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
@@ -225,9 +252,9 @@
       "name": "python38-azureml"
     },
     "kernelspec": {
-      "display_name": "Python 3.8 - AzureML",
+      "display_name": "mlops",
       "language": "python",
-      "name": "python38-azureml"
+      "name": "python3"
     },
     "language_info": {
       "codemirror_mode": {
@@ -239,7 +266,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.5"
+      "version": "3.13.5"
     },
     "microsoft": {
       "host": {
@@ -250,11 +277,6 @@
     },
     "nteract": {
       "version": "nteract-front-end@1.0.0"
-    },
-    "vscode": {
-      "interpreter": {
-        "hash": "c87d6401964827bd736fe8e727109b953dd698457ca58fb5acabab22fd6dac41"
-      }
     }
   },
   "nbformat": 4,
