--- a/ml-pipelines/sdk/train-sdkv2.ipynb
+++ b/ml-pipelines/sdk/train-sdkv2.ipynb
@@ -81,14 +81,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Enter details of your AML workspace\n",
-    "subscription_id = \"5bef918d-59f1-49d6-897b-919e5d5c05a0\"\n",
-    "resource_group = \"rg-gasunimlopsv2-prod\"\n",
-    "workspace = \"mlw-gasunimlopsv2-prod\""
+    "subscription_id = \"\"\n",
+    "resource_group = \"\"\n",
+    "workspace = \"\""
    ]
   },
   {
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -214,28 +214,28 @@
     "from azure.ai.ml.entities import AmlCompute,IdentityConfiguration,ManagedIdentityConfiguration\n",
     "from azure.ai.ml.constants import ManagedServiceIdentityType\n",
     "\n",
-    "# Create an identity configuration for a system-assigned managed identity\n",
-    "identity_config = IdentityConfiguration(type = ManagedServiceIdentityType.USER_ASSIGNED)\n",
+    "# In case you want to use a system-assigned managed identity, uncomment the following lines:\n",
+    "# # Create an identity configuration for a system-assigned managed identity\n",
+    "# identity_config = IdentityConfiguration(type = ManagedServiceIdentityType.USER_ASSIGNED)\n",
     "\n",
-    "# Create an identity configuration from the user-assigned managed identity\n",
-    "managed_identity = ManagedIdentityConfiguration(resource_id=\"/subscriptions/5bef918d-59f1-49d6-897b-919e5d5c05a0/resourceGroups/rg-gasunimlopsv2-prod/providers/Microsoft.ManagedIdentity/userAssignedIdentities/gasunie-mi-prod\")\n",
-    "identity_config = IdentityConfiguration(type = ManagedServiceIdentityType.USER_ASSIGNED, user_assigned_identities=[managed_identity])\n",
+    "# # Create an identity configuration from the user-assigned managed identity\n",
+    "# managed_identity = ManagedIdentityConfiguration(resource_id=\"<your-managed-identity-resource-id>\")\n",
+    "# identity_config = IdentityConfiguration(type = ManagedServiceIdentityType.USER_ASSIGNED, user_assigned_identities=[managed_identity])\n",
     "\n",
     "\n",
     "try:\n",
-    "    ml_client.compute.get(name=\"cpu-test-mi\")\n",
+    "    ml_client.compute.get(name=\"cpu-cluster\")\n",
     "    print(\"Compute already exists\")\n",
     "\n",
     "except:\n",
     "    print(\"Compute not found; Proceding to create\")\n",
     "    \n",
     "    my_cluster = AmlCompute(\n",
-    "    name=\"cpu-cluster-mi\",\n",
+    "    name=\"cpu-cluster\",\n",
     "    type=\"amlcompute\", \n",
     "    size=\"STANDARD_DS3_V2\", \n",
     "    min_instances=0, \n",
-    "    max_instances=4,\n",
-    "    identity=identity_config\n",
+    "    max_instances=4\n",
     "    )\n",
     "    ml_client.compute.begin_create_or_update(my_cluster)"
    ]
