Include blanks in notebooks for participants to fill in

--- a/ml-pipelines/sdk/train-sdkv2.ipynb
+++ b/ml-pipelines/sdk/train-sdkv2.ipynb
@@ -237,7 +237,7 @@
     "    min_instances=0, \n",
     "    max_instances=4\n",
     "    )\n",
-    "    ml_client.compute.begin_create_or_update(my_cluster)"
+    "    ml_client.compute._________(my_cluster) ### !!!! TODO !! # Create the compute cluster`"
    ]
   },
   {
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "gather": {
@@ -348,7 +348,7 @@
     "    description=\"Taxi dataset\",\n",
     "    name=\"taxi-data\"\n",
     ")\n",
-    "ml_client.data.create_or_update(my_data)"
+    "ml_client.data.create_or_update(____________) ### !!!! TODO !! # Create the data asset"
    ]
   },
   {
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "gather": {
@@ -415,7 +415,7 @@
     "    description=\"Environment created from a Docker image plus Conda environment to train taxi model.\",\n",
     ")\n",
     "\n",
-    "ml_client.environments.create_or_update(my_environment)"
+    "ml_client._____________.create_or_update(my_environment) ### !!!! TODO !! # Create the environment"
    ]
   },
   {
